--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
     server_name localhost;
 
-    location /stream-sync/ {
+    location / {
         proxy_pass http://stream-sync-frontend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
