--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BACKEND_BASE=localhost:5000
+NEXT_PUBLIC_BACKEND_BASE=http://localhost:5000
 NEXT_PUBLIC_BACKEND_PREFIX=/api/v1
 NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_BASE}${NEXT_PUBLIC_BACKEND_PREFIX}
 
