using subdomaine name for stream-sync app

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_BACKEND_BASE=http://localhost:5000
-NEXT_PUBLIC_BACKEND_PREFIX=/api/v1
-NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_BASE}${NEXT_PUBLIC_BACKEND_PREFIX}
+DOMAINE="localhost"
+NEXT_PUBLIC_BACKEND_BASE=http://${DOMAINE}/stream-sync/api
+NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_BASE}/v1
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
