--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,12 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost;
 
     location / {
+        return 204;
+    }
+
+    location /stream-sync/ {
         proxy_pass http://stream-sync-frontend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -11,6 +14,14 @@ server {
 
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /stream-sync/api/ {
+        proxy_pass http://stream-sync-backend:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
