--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 DOMAINE="localhost"
-NEXT_PUBLIC_BACKEND_BASE=http://${DOMAINE}/stream-sync/api
+
+NEXT_PUBLIC_FRONTEND_PREFIX="/stream-sync"
+NEXT_PUBLIC_BACKEND_BASE=http://${DOMAINE}${NEXT_PUBLIC_FRONTEND_PREFIX}/api
 NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_BASE}/v1
 
 POSTGRES_DB=postgres
