--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,5 @@
-DOMAINE="localhost"
-
-NEXT_PUBLIC_FRONTEND_PREFIX="/stream-sync"
-NEXT_PUBLIC_BACKEND_BASE=http://${DOMAINE}${NEXT_PUBLIC_FRONTEND_PREFIX}/api
-NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_BASE}/v1
+NEXT_PUBLIC_FRONTEND_PREFIX=""
+NEXT_PUBLIC_BACKEND_URL=http://localhost:5000/v1
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
