--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -3,7 +3,7 @@ services:
     container_name: stream-sync-frontend
     build:
       context: ./stream-sync-frontend
-      dockerfile: dev.Dockerfile
+      dockerfile: prod.Dockerfile
       args:
         NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
     restart: always
